startpage/raspberry-kubernetes/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: fuebiapp-service
  labels:
    app: fuebiapp
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: fuebiapp
