startpage/raspberry-kubernetes/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fuebiapp-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - secretName: fuebiapp-com-tls
      hosts:
        - fuebiapp.com
  rules:
  - host: fuebiapp.com
    http:
        paths:
          - backend:
              serviceName: fuebiapp-service
              servicePort: 80
